[package]
name = "femtoclaw-wasm"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
description = "FemtoClaw WASM Runtime — WebAssembly sandbox execution for isolated capability execution"
repository = "https://github.com/femtoclaw/femtoclaw-wasm.git"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "32"
thiserror = "1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
